# idf-extra-components

./: .build-test-rules.yml  README.md
spi_nand_flash/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  layered_architecture.md
spi_nand_flash/.cursor/rules/: spi_nand-flash-comments-and-commits.mdc
spi_nand_flash/examples/nand_volume_uart_dumper/: CMakeLists.txt  README.md  host_dump_nand_volume.py  sdkconfig.defaults
spi_nand_flash/host_test/: CMakeLists.txt  README.md  pytest_nand_flash_linux.py  sdkconfig.defaults
spi_nand_flash/host_test/main/: CMakeLists.txt  onfi_param_page_fixtures.h  test_nand_flash.cpp  test_nand_flash_basic.cpp  test_nand_linux_emulator.cpp  test_nand_onfi_crc.cpp  (+1 more)
spi_nand_flash/include/: esp_nand_blockdev.h  esp_nand_partition.h  nand_device_types.h  nand_linux_mmap_emul.h  spi_nand_flash.h  spi_nand_flash_test_helpers.h
spi_nand_flash/openspec/: RFC_Anonymous_Chip_Detect.md  RFC_SPI_NAND_OOB_LAYOUT.md  anonymous_chip_detect_proposal.md  baseline.md  configurable_oob_layout_proposal.md  feature-module-inventory.md  gigadevice_oob_layout_proposal.md  known-bugs.md
spi_nand_flash/priv_include/: nand.h  nand_anonymous_manual.h  nand_flash_devices.h  nand_onfi.h  nand_onfi_crc.h  nand_onfi_param_page.h  nand_oob_device.h  nand_oob_layout_default.h  nand_oob_layout_types.h  nand_oob_xfer.h  spi_nand_oper.h
spi_nand_flash/src/: dhara_glue.c  nand.c  nand_anonymous_manual.c  nand_flash_blockdev.c  nand_impl.c  nand_impl_linux.c  nand_linux.c  nand_linux_mmap_emul.c  nand_onfi.c  nand_onfi_crc.c  nand_onfi_read.c  nand_oob_device.c  nand_oob_layout_default.c  nand_oob_xfer.c  nand_partition.c  nand_wl_blockdev.c  spi_nand_flash_test_helpers.c  spi_nand_oper.c
spi_nand_flash/test_app/: README.md  pytest_spi_nand_flash.py  sdkconfig.ci.anonymous
(+64 files in other folders)
